# test

./: README.md  pyproject.toml
hello_codex/: greeter.py
janken_web/: __init__.py
tests/: test_greeter.py  test_janken_web.py
